--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "chartjs": "^0.3.24",
         "i": "^0.3.7",
         "jquery": "^3.7.1",
+        "maska": "^3.1.0",
         "sweetalert2": "^11.12.3"
     }
 }
