Novas entradas para site, github e linkedin nas variáveis de ambiente

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,10 @@ MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
 
+WEB_SITE=
+GITHUB=
+LINKEDIN=
+
 SOCIAL_INSTAGRAM=
 SOCIAL_FACEBOOK=
 SOCIAL_WHATSAPP=
